--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,16 @@
 
 .landtxt{
     position: absolute;
-    color: orange;
-    top:30vh
+    top:30vh;
+    font-family: 'Sedgwick Ave Display', cursive;
     
+
+}
+.landtxt h1{
+    font-size: 10vh;
+    color: rgba(255, 166, 0, 0.568);
+}
+.landtxt h2{
+    font-size: 10vh;
+    color:orange
 }
