--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 }
 .landtxt h1{
     font-size: 10vh;
-    color: rgba(255, 166, 0, 0.568);
+    color: rgba(128, 128, 128, 0.692)
 }
 .landtxt h2{
     font-size: 10vh;
