--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,18 @@
     font-size: 10vh;
     color:orange
 }
+
+.registration{
+    background-color: #08101f
+}
+
+.formstyle input{
+    border-top: none;
+    border-left: orange solid 5px;
+    border-right: none;
+    color:orange ;
+    
+}
+.dark {
+    background-color: #000000d0;
+}
