commented out styling for border radius on about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,9 @@ color: orange;
     font: bold;
     text-align: center;
 }
+
+/* .about{border: radius 40%;} */
+
 #about:hover{
     color: indigo;
 }
