added a div class paganni to be used for font styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,7 +116,7 @@ color: orange;
     text-align: left; 
 }
 #paganni{
- font-family: ;
+ font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 
