chang color text

--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,10 @@ color: orange;
     font: bold;
     text-align: left; 
 }
+/* textx color for card holders*/
+.races{
+    color:orange
+}
 
 
 /* KeyFrame */
