--- a/css/styles.css
+++ b/css/styles.css
@@ -136,3 +136,10 @@ animation: shake 0.1s infinite;
         
     }
    }
+/*hide display for sprints circuit drag*/
+.sprints{
+    display:none
+}
+.circuits{
+    display:none
+}
