added font family

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,5 @@ animation: shake 0.1s infinite;
 
    }
    .container2{
-    font-family: 'UnifrakturMaguntia', cursive;
+    font-family: 'Volkhov', serif;
    }
-    
