accepted change in css, index and race

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,3 +160,6 @@ animation: shake 0.1s infinite;
        font-size: 15vh;
         font-family: 'Wallpoet', cursive;
    }
+   .card-body kardbody {
+       height: 310vh;
+   }
